--- a/src/Blazor.Gitter.Core/content/css/_layout.scss
+++ b/src/Blazor.Gitter.Core/content/css/_layout.scss
@@ -7,6 +7,7 @@
 
 .wrapper {
     display: flex;
+    padding-top: 56px;
     flex-direction: row;
     height: 100%;
 }
